# bookmarks

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: visualize_dom.py
zbookmarks/: __init__.py  bookmark.py
