[tool.poetry]
name = "zbookmarks"
version = "1.1"
description = "Load / dump Chrome bookmark files"
authors = ["Yannis Zarkadas"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
networkx = "^2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yanniszark/zbookmarks/issues"
"homepage" = "https://github.com/yanniszark/zbookmarks"
"repository" = "https://github.com/yanniszark/zbookmarks"
"documentation" = "https://github.com/yanniszark/zbookmarks/blob/master/README.md"
